# modular-rag

./: .gitignore  README.md  design.excalidraw  ingest.py  ingestion_pipeline.py  main.py  pyproject.toml  requirements.txt  retrieve.py  run_unit_tests.sh  test.ipynb  todo.txt
chunk_storages/: chunk_storage.py  sqlite_chunk_storage.py  test_sqlite_chunk_storage.py
embedders/: embedder.py  openai_embedder.py  test_openai_embedder.py
llms/: chat_gpt.py  test_chat_gpt.py
loader_chunkers/: loader_chunker.py  multimodal_loader_chunker.py  test_multimodal_loader_chunker.py
query_rewriters/: multi_query_rewriter.py  query_rewriter.py
rag_types/: vector.py
rerankers/: pinecone_reranker.py  reranker.py  test_pinecone_reranker.py
retrievers/: retriever.py  semantic_retriever.py  test_retriever.py  test_semantic_retriever.py
src/: ingest.py  retrieve.py
src/common/embedders/: openai_embedder.py  test_integration_openai_embedder.py  test_openai_embedder.py
src/common/llms/: __init__.py  chat_gpt.py  llm.py  test_chat_gpt.py
src/common/rag_types/: __init__.py
src/ingestion/chunk_dbs/: __init__.py  chunk_db.py  sqlite_chunk_db.py  test_integration_sqlite_chunk_db.py
src/ingestion/loader_chunkers/: loader_chunker.py  multimodal_loader_chunker.py  test_multimodal_loader_chunker.py
src/ingestion/vector_dbs/: __init__.py  pinecone_vector_db.py  vector_db.py
src/pipelines/: __init__.py  ingestion_pipeline.py  retrieval_pipeline.py
src/retrieval/rerankers/: __init__.py  (+3 more)
vector_stores/: pinecone_vector_store.py  test_pinecone_vector_store.py  vector_store.py
(+36 files in other folders)
